fixed image size on mobile on singleroom page

--- a/src/App.css
+++ b/src/App.css
@@ -648,6 +648,10 @@ h6 {
       height: 400px;
       padding: 20px;
     }
+
+    .single-room-images {
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    }
 }
 
 @media only screen 
